chore: ts configuration using config package module (#85)
* refactor: ts configuration using config package module

* chore: pr title checker prefixes modified

* chore: pr title checker prefixes modified added

--- a/_templates/tsconfig.json.hbs
+++ b/_templates/tsconfig.json.hbs
@@ -1,6 +1,6 @@
 {{#expect name}}
 {
-  "extends": "../config/src/ts/node.json",
+  "extends": "@gfft/config/src/ts/node.json",
   "compilerOptions": {
     "paths": {
       "@gfft/{{ name }}": ["./src/index.ts"]
