--- a/_templates/package.json.hbs
+++ b/_templates/package.json.hbs
@@ -37,5 +37,7 @@
     "esno": "^0.16.3",
     "tsup": "^7.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@gfft/config": "workspace:^"
+  }
 }
