chore: project name changed

--- a/_templates/README.md.hbs
+++ b/_templates/README.md.hbs
@@ -1,6 +1,6 @@
 {{#expect name}}
-# @gfft/{{ name }}
+# @templ/{{ name }}
 
-GFFT {{ name }} module.
+TEMPL {{ name }} module.
 
-[GitHub](https://github.com/rjoydip/gfft)
+[GitHub](https://github.com/rjoydip/templ)
