--- a/_templates/tsconfig.json.hbs
+++ b/_templates/tsconfig.json.hbs
@@ -1,9 +1,9 @@
 {{#expect name}}
 {
-  "extends": "@gfft/config/src/ts/node.json",
+  "extends": "@templ/config/src/ts/node.json",
   "compilerOptions": {
     "paths": {
-      "@gfft/{{ name }}": ["./src/index.ts"]
+      "@templ/{{ name }}": ["./src/index.ts"]
     }
   },
   "exclude": ["dist", "*.d.ts"]
