--- a/scripts/_templates/turbo.json.hbs
+++ b/scripts/_templates/turbo.json.hbs
@@ -1,8 +1,14 @@
 {
-  "extends": [
-    "//"
-  ],
+  "extends": ["//"],
   "pipeline": {
-    "build": {}
+    "build": {},
+    "test": {
+      "cache": false,
+      "dependsOn": ["build"]
+    },
+    "test:ci": {
+      "cache": false,
+      "dependsOn": ["build"]
+    }
   }
 }
