--- a/scripts/_templates/tsup.config.ts.hbs
+++ b/scripts/_templates/tsup.config.ts.hbs
@@ -1,8 +1,7 @@
-import { defineConfig } from 'tsup'
-import { mergeConfig } from 'vitest/config'
-import { config as defaultTsupSharedConfig } from '../../tsup.shared'
+import { tsupConfig } from '@templ/config'
 
-export default defineConfig((options) => {
-  return mergeConfig(defaultTsupSharedConfig,
-    { splitting: true, minify: !options.watch, })
-})
+/* The line `export default tsupConfig({})` is exporting the result of calling the `tsupConfig`
+function with an empty object as its argument. The `tsupConfig` function likely returns a
+configuration object that is used by the `tsup` bundler to configure the build process. By exporting
+it as the default export, it can be imported and used by other modules. */
+export default tsupConfig({})
