chore: refactor tsconfig for entire application

--- a/scripts/_templates/README.md.hbs
+++ b/scripts/_templates/README.md.hbs
@@ -1,6 +1,7 @@
-{{#expect name}}
 # @templ/{{ name }}
 
 TEMPL {{ name }} module.
 
-[GitHub](https://github.com/rjoydip/templ)
+[GitHub](https://github.com/rjoydip/templ/tree/main/packages/{{ name }})
+
+{{#expect name}}
