--- a/scripts/_templates/tsconfig.json.hbs
+++ b/scripts/_templates/tsconfig.json.hbs
@@ -1,11 +1,12 @@
-{{#expect name}}
 {
-  "extends": "@templ/config/src/ts/node.json",
+  "extends": "@templ/tsconfig/node.json",
   "compilerOptions": {
     "paths": {
-      "@templ/{{ name }}": ["src/index.ts"]
+      "@templ/{{ name }}": ["./src/index.ts"]
     }
   },
   "include": ["src"],
   "exclude": ["dist", "*.d.ts"]
 }
+
+{{#expect name}}
