chore: refactor work in progress

--- a/scripts/_templates/turbo.json.hbs
+++ b/scripts/_templates/turbo.json.hbs
@@ -1,14 +1,3 @@
-{
-  "extends": ["//"],
-  "pipeline": {
-    "build": {},
-    "test": {
-      "cache": false,
-      "dependsOn": ["build"]
-    },
-    "test:ci": {
-      "cache": false,
-      "dependsOn": ["build"]
-    }
-  }
-}
+{ "extends": ["//"], "pipeline": { "build": {}, "test": { "cache": false,
+"dependsOn": ["build"] }, "test:ci": { "cache": false, "dependsOn": ["build"] }
+} }
