--- a/scripts/_templates/tsup.config.ts.hbs
+++ b/scripts/_templates/tsup.config.ts.hbs
@@ -1,3 +1,1 @@
-import { tsupConfig } from '@templ/config'
-
-export default tsupConfig({})
+import { tsupConfig } from '@templ/config' export default tsupConfig({})
