--- a/scripts/_templates/vitest.config.ts.hbs
+++ b/scripts/_templates/vitest.config.ts.hbs
@@ -1,16 +1,7 @@
-/// <reference types='vitest' />
+///
+<reference types='vitest' />
 
-import { defineConfig } from 'vitest/config'
-import tsconfigPaths from 'vite-tsconfig-paths'
-
-export default defineConfig({
-  test: {
-    include: ['test/**/*.ts'],
-    coverage: {
-      enabled: true,
-      provider: 'v8',
-      reporter: ['text', 'json', 'json-summary', 'html', 'lcov'],
-    },
-  },
-  plugins: [tsconfigPaths()],
-})
+import { defineConfig } from 'vitest/config' import tsconfigPaths from
+'vite-tsconfig-paths' export default defineConfig({ test: { include:
+['test/**/*.ts'], coverage: { enabled: true, provider: 'v8', reporter: ['text',
+'json', 'json-summary', 'html', 'lcov'], }, }, plugins: [tsconfigPaths()], })
