chore: lots of things changed, build module created, third_party/web-check pulled, tsconfig changes

--- a/scripts/_templates/test/index.test.ts.hbs
+++ b/scripts/_templates/test/index.test.ts.hbs
@@ -1,6 +1,6 @@
 import { describe, expect, test } from 'vitest'
 
-describe('{{ name }}', () => {
+describe('@templ/{{ name }}', () => {
   test('index', () => {
     expect(true).toBeTruthy()
   })
