--- a/scripts/_templates/tsconfig.json.hbs
+++ b/scripts/_templates/tsconfig.json.hbs
@@ -1,6 +1,7 @@
 {
   "extends": "@templ/tsconfig/node.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@templ/{{ name }}": ["./src/index.ts"]
     }
