--- a/scripts/_templates/package.json.hbs
+++ b/scripts/_templates/package.json.hbs
@@ -29,22 +29,36 @@
     "*.d.ts"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && pnpm typedoc",
     "clean": "rimraf .turbo dist docs coverage",
-    "docs:preview": "sirv docs",
-    "docs:build": "typedoc src/index.ts",
-    "dev": "tsup ./src/index.ts --watch",
+    "dev": "tsx ./src/index.ts --watch",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
+    "size:limit": "size-limit",
     "test": "vitest run",
     "test:ci": "CI=true vitest run",
-    "test:watch": "vitest run --watch"
+    "test:watch": "vitest run --watch",
+    "typedoc": "typedoc src/index.ts",
+    "typedoc:preview": "sirv docs"
   },
   "devDependencies": {
+    "@size-limit/file": "^8.2.6",
+    "@templ/config": "workspace:^",
+    "@templ/eslint-config": "workspace:^",
+    "@templ/tsconfig": "workspace:^",
+    "@types/node": "^20.5.7",
+    "@vitest/coverage-v8": "^0.34.3",
+    "eslint": "^8.48.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
+    "size-limit": "^8.2.6",
+    "tsx": "^3.12.7",
+    "tsup": "^7.2.0",
     "typedoc": "^0.24.8",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.2"
-  }
+  },
+  "size-limit": []
 }
 
 {{#expect name}}
