--- a/scripts/_templates/tsup.config.ts.hbs
+++ b/scripts/_templates/tsup.config.ts.hbs
@@ -1,1 +1,3 @@
-import { tsupConfig } from '@templ/config' export default tsupConfig({})
+import { tsupConfig } from '@templ/config'
+
+export default tsupConfig({})
