chore: build package added, modified othes things

--- a/scripts/_templates/turbo.json.hbs
+++ b/scripts/_templates/turbo.json.hbs
@@ -2,5 +2,9 @@
   "extends": [
     "//"
   ],
-  "pipeline": {}
+  "pipeline": {
+    "build": {
+      "dependsOn": ["@templ/config#build", "@templ/eslint-config#build", "@templ/tsconfig#build"]
+    }
+  }
 }
