--- a/scripts/_templates/tsconfig.json.hbs
+++ b/scripts/_templates/tsconfig.json.hbs
@@ -2,6 +2,7 @@
   "extends": "@templ/tsconfig/node.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "@templ/{{ name }}": ["./src/index.ts"]
     }
