fix: docs build issue

--- a/scripts/_templates/package.json.hbs
+++ b/scripts/_templates/package.json.hbs
@@ -32,7 +32,7 @@
     "build": "wireit",
     "clean": "wireit",
     "dev": "wireit",
-    "docs:build": "wireit",
+    "build:docs": "wireit",
     "docs:preview": "wireit",
     "eslint": "wireit",
     "lint:size": "wireit",
@@ -78,7 +78,7 @@
         "tsconfig.json"
       ]
     },
-    "docs:build": {
+    "build:docs": {
       "command": "typedoc src/index.ts",
       "output": [
         "docs/**"
@@ -93,7 +93,7 @@
         "src/**"
       ],
       "dependencies": [
-        "docs:build"
+        "build:docs"
       ]
     },
     "eslint": {
