chore: basic setup script added

--- a/scripts/_templates/package.json.hbs
+++ b/scripts/_templates/package.json.hbs
@@ -35,7 +35,7 @@
     "test:watch": "wireit"
   },
   "devDependencies": {
-    "@templ/config": "workspace:^",
+    "@templ/config": "workspace:*",
     "@types/node": "^20.5.7",
     "@vitest/coverage-v8": "^0.34.3",
     "trash-cli": "^5.0.0",
