--- a/scripts/_templates/package.json.hbs
+++ b/scripts/_templates/package.json.hbs
@@ -40,9 +40,7 @@
     "@vitest/coverage-v8": "^1.1.0",
     "trash-cli": "^5.0.0",
     "tsup": "^7.2.0",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^1.1.0",
-    "wireit": "^0.13.0"
+    "vitest": "^1.1.0"
   },
   "wireit": {
     "build": {
